# finceptra_backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
finceptra/: __init__.py
finceptra/data_sources/: __init__.py  base.py
finceptra/recommendations/: __init__.py  models.py
